exports[`test a.js 1`] = `
"/**
 * @providesModule A
 * @flow
 */

(require('./b'): void);
(require('C'): void);

module.exports = 'A';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule A
 * @flow
 */
(require("./b"): void);
(require("C"): void);
module.exports = "A";

"
`;

exports[`test b.js 1`] = `
"/**
 * @providesModule B
 * @flow
 */

(require('A'): void);
(require('D'): void);

module.exports = 'B';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule B
 * @flow
 */
(require("A"): void);
(require("D"): void);
module.exports = "B";

"
`;

exports[`test c.js 1`] = `
"/**
 * @providesModule C
 * @flow
 */

require('Root');
(require('./b'): void);

module.exports = 'C';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule C
 * @flow
 */
require("Root");
(require("./b"): void);
module.exports = "C";

"
`;

exports[`test d.js 1`] = `
"/**
 * @providesModule D
 * @flow
 */

(require('./b'): void);

module.exports = 'D';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule D
 * @flow
 */
(require("./b"): void);
module.exports = "D";

"
`;

exports[`test root.js 1`] = `
"/**
 * @providesModule Root
 * @flow
 */

module.exports = 'Root';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule Root
 * @flow
 */
module.exports = "Root";

"
`;
